syntax = "proto3";

package order.v1;

import "google/api/annotations.proto";
option go_package = "github.com/qqz/Happy-Stream/api/order/v1;v1";

service Order{
  rpc AddOrder(OrderAddReq) returns (OrderAddReply){}
  rpc RemoveOrder(OrderRemoveReq) returns (OrderRemoveReply){
    option (google.api.http) = {
      delete:"/v1/order/delete/{id}"
    };
  }
  rpc ChangeOrder(OrderChangeReq) returns (OrderChangeReply){
    option (google.api.http) = {
      patch:"/v1/order/patch",
      body:"*"
    };
  }
  rpc ListOrder(ListOrderQueryReq) returns (ListOrderQueryReply){
    option (google.api.http) = {
      get:"/v1/order/list"
    };
  }
  rpc QueryOrder(OrderQueryReq) returns (OrderQueryReply){
    option (google.api.http) = {
      get:"/v1/order/get/{id}"
    };
  }
}

message OrderAddReq{
   string userId = 1;
   string text = 2;
}

message OrderAddReply{

}


message OrderRemoveReq{
  int64 id = 1;
}

message OrderRemoveReply{

}


message OrderChangeReq{
  int64 id = 1;
  int32 userId = 2;
  string text = 3;
  int32 status = 4;
}

message OrderChangeReply{

}


message ListOrderQueryReq{
   PageInfoReq page = 1;
   string query_type = 2;
   string query_param = 3;
}


message OrderInfo{
  int64 id = 1;
  string text = 2;
  string created_time = 3;
  int32 status = 4;
}
message ListOrderQueryReply{
  repeated OrderInfo orders = 1;
  PageInfoReply page = 2;
}


message OrderQueryReq{
  int64 id = 1;
}

message OrderQueryReply{
  OrderInfo order = 1;
}

message PageInfoReq {
  int64 page_num = 1;
  int64 page_size = 2;
}

message PageInfoReply {
  int64 page_num = 1;
  int64 page_size = 2;
  int64 total = 3;
}